--- a/index.html
+++ b/index.html
@@ -6,8 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
-    <h1>hola</h1>
+    <header class="nav-bar container">
+      <img src="" alt="small-logo">
+      <button>Suscríbete</button>
+    </header>
+    <section class="main container">
+      <img src="" alt="big-logo">
+      <h1>Verde que te quiero verde</h1>
+      <p>España es el mayor productor de Brócoli del mundo, pero un 88% es exportado.</p>
+      <h3>¿Lo has probado?</h3>
+    </section>
+    <section class="action">
+        <iframe src="https://www.youtube.com/embed/uvwElUTz7qE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div class="subscribe container">
+        <p>Suscribete a nuestra Newsletter, te enviaremos deliciosas recetas con brócoli</p>
+        <input type="text">
+        <button>Suscríbete</button>
+      </div>
+    </section>
+    <section class="local-benefits container">
+      <h2>¡El brócoli quiere quedarse en casa!</h2>
+      <p>Con el consumo local ayudamos al medio ambiente reduciendo contaminación tanto por transporte como por refrigeración del producto. También ganamos en frescura del producto, promoviendo a su vez el cultivo ecológico, reduciendo así el uso de pesticidas que dañan tanto nuestra salud, como el medio ambiente (aguas subterráneas, tierra y biodiversidad).</p>
+    </section>
+    <section class="brocoli-benefits container">
+      <h2>Super Super Food</h2>
+      <article>
+        <img src="" alt="">
+        <h3>Antioxidante</h3>
+        <p>Vitaminas (vitamina A, beta-caroteno, niacina, vitamina B1, B2, B6, E, ácido fólico y vitamina C). De hecho, está considerado como la gran superverdura por el número de nutrientes que aporta.</p>
+      </article>
+      <article>
+        <h3>Depurativo y saciante</h3>
+        <img src="" alt="">
+        <p>Teniendo en cuenta que el brócoli no contiene grasas y que nos aporta una importante cantidad de fibra (3 gramos por cada 100), es un buen aliado para saciar nuestro apetito sin elevar la cantidad de kilocalorías ingeridas por su bajo valor energético.</p>
+      </article>
+      <article>
+        <img src="" alt="">
+        <h3>Preventivo del cáncer</h3>
+        <p>El sulforafano es un agente muy potente para combatir el cáncer que se encuentra presente en el brócoli. Investigadores de la Universidad de Illinois han demostrado que con “tres a cinco porciones por semana de brócoli es suficiente para tener un efecto preventivo contra el cáncer”.</p>
+      </article>
+      <article>
+        <h3>Fortalece defensas</h3>
+        <img src="" alt="">
+        <p>El brócoli es la hortaliza con mayor aporte nutricional por unidad de peso comestible, razón por la que se conoce como la superverdura. </p>
+      </article>
+    </section>
+    <footer class="footer">
+      <img src="" alt="trust-logo">
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
